[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/maps/Test.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://classes/TopDown.gd" type="Script" id=3]

[node name="TopDown" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Entities" type="YSort" parent="."]

[node name="Player" parent="Entities" instance=ExtResource( 2 )]
position = Vector2( 75.2899, 97.0154 )

[node name="CameraTween" type="Tween" parent="."]

[connection signal="change_map" from="Map" to="." method="_on_Map_change_map"]
